:construction: Updating the function
Updating the function

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ main {
 .checkbox {
     padding: 3px;
     border: solid 1px #bbb;
-    color: #F24535;
+    color: #bbb;
     cursor: pointer;
 }
 
