--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,11 @@
     font-style: normal;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     font-family: 'NanumBarunpen';
     background-color: #F2C6AC;
     color: #333;
@@ -16,10 +17,7 @@ body {
 
 /* header */
 header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin-left: 60px;
     margin-top: 60px;
 }
 
@@ -30,144 +28,115 @@ header h1 {
 /* main */
 
 main {
-    width: 900px;
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
-}
-
-/* contents */
-
-#contents {
-    width: 50%;
-    margin: 0 10px;
-}
-
-.list {
     display: flex;
     flex-direction: column;
-}
-
-.list h2 {
-    padding: 10px 15px;
-    font-size: 20px;
-    background-color: #F2C288;
-    border-radius: 8px;
-    border: solid 1px #333;
-    margin-bottom: 10px;
-}
-
-.todo {
-    display: flex;
-    align-items: center;
-    font-size: 18px;
-    background-color: #FFF;
-    padding: 10px 15px;
-    border-radius: 8px;
-    border: solid 1px #333;
-    margin-bottom: 10px;
-}
-
-.checkbox {
-    padding: 3px;
-    border: solid 1px #bbb;
-    color: #bbb;
-    cursor: pointer;
-}
-
-.todo_value {
-    margin-left: 10px;
-    width: 85%;
-}
-
-.del_btn {
-    padding: 3px 5px;
-    background-color: #98A665;
-    color: #FFF;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-    font-family: 'NanumBarunpen';
+    margin: 50px 60px;
 }
 
 /* inputs */
 
-#inputs {
-    width: 50%;
-    margin: 0 10px;
-}
-
-.add {
+.inputs {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
 }
 
-.add h3 {
-    padding: 10px 15px;
-    font-size: 20px;
-    background-color: #F2C288;
-    border-radius: 8px;
-    border: solid 1px #333;
-    margin-bottom: 10px;
-}
-
-.add input {
-    padding: 10px 15px;
-    font-family: 'NanumBarunpen';
-    font-size: 16px;
-    border-radius: 5px;
+.inputs input {
+    width: 80%;
+    padding: 10px;
     border: none;
-    margin-bottom: 10px;
+    font-size: 16px;
 }
 
 .add_btn {
-    padding: 5px 15px;
-    margin-bottom: 10px;
-    background-color: #98A665;
-    color: #FFF;
+    width: 20%;
+    padding: 10px;
     border: none;
-    border-radius: 5px;
-    cursor: pointer;
     font-family: 'NanumBarunpen';
+    font-size: 14px;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
-
-.memo_area h3{
-    padding: 10px 15px;
-    font-size: 20px;
-    background-color: #F2C288;
-    border-radius: 8px;
-    border: solid 1px #333;
-    margin-bottom: 10px;
+.add_btn:hover {
+    background-color: #58658C;
+    color: #fff;
 }
 
-.memo_area textarea {
-    padding: 10px 15px;
-    font-family:'NanumBarunpen';
-    font-size: 16px;
-    border-radius: 5px;
-    border: none;
-    margin-bottom: 10px;
+/* itmes */
+
+.items {
+    display: flex;
+    margin-bottom: 30px;
+}
+
+ul {
     width: 100%;
-    height: 300px;
-    box-sizing: border-box;
 }
+
+
+.items ul li {
+    position: relative;
+    background-color: #a2a88b;
+    cursor: pointer;
+    padding: 10px 10px 10px 40px;
+    font-size: 18px;
+    transition: 0.2s;
+
+      /* make the list items unselectable */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+
+.items ul li:nth-child(even) {
+    background-color: #e9c08e;
+}
+
+.items ul li:hover {
+    background-color: #fff;
+}
+
+.items ul li.checked {
+    background-color: #F2C6AC;
+    text-decoration: line-through;
+}
+
+.items ul li.checked::before {
+    content: 'V';
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    color: #eb4141;
+}
+
+.del_btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.del_btn:hover {
+    background-color: #eb4141;
+}
+
 
 /* footer */
 
 footer {
-    width: 900px;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    margin-top: 50px;
     font-size: 16px;
-    padding: 20px 0;
+    padding: 20px 60px;
     background-color: #58658C;
     color: #FFF;
 }
 
 footer a {
+    margin-left: 5px;
     color: #FFF;
     text-decoration: none;
 }
